# autocode-demo

./: README.md  pyproject.toml
src/: __init__.py  calculator.py  cli.py
src/autocode_demo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_calculator.py
