[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autocode-demo"
version = "0.1.0"
description = "Autonomous coding loop demo project"
requires-python = ">=3.10"

[project.scripts]
autocode-demo = "src.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
