[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "autocode-demo"
version = "0.1.0"
description = "Autonomous coding loop demo project"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
autocode-calc = "src.cli:main"
